NOJIRA - updates local torquebox script with new *OPTS